--- a/style.css
+++ b/style.css
@@ -1,3 +1,25 @@
 body {
+    li {
+      display: inline;
+      float: left;
+      width: 200px;
+      padding: 5px;
+      margin: 5px;}
 
+    li a:hover {
+      background-color: #111;
+      color: green;
+      font-size: 50px;
+    }
+    
+    ul {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+      position: fixed;
+      background-color: #D3D3D3;
+      width: 100%;
+      top: 0;
+      left: 0;
 }
+  </body> 
