--- a/style.css
+++ b/style.css
@@ -1,17 +1,35 @@
 body {
-    li {
-      display: inline;
-      float: left;
-      width: 200px;
-      padding: 5px;
-      margin: 5px;}
-
-    li a:hover {
-      background-color: #111;
-      color: green;
-      font-size: 50px;
+      background-color: salmon;
     }
-    
+
+    h1 {
+      font-size: 200%;
+      color: gold;
+      text-align: center;
+    }
+
+    table {
+      font-family: arial, sans-serif;
+      border-collapse: collapse;
+      width: 75%;
+      }
+
+    td, th {
+      border: 5px solid #D3D3D3;
+      text-align: left;
+      padding: 5px;
+    }
+
+    tr:nth-child(even) {
+      background-color: #D3D3D3;
+    }
+
+    a {
+      color: #f2bf1c;
+      font-size: 150%;
+      text-decoration: none;
+    }
+
     ul {
       list-style-type: none;
       margin: 0;
@@ -21,5 +39,19 @@ body {
       width: 100%;
       top: 0;
       left: 0;
-}
-  </body> 
+
+    }
+
+    li {
+      display: inline;
+      float: left;
+    width: 200px;
+    padding: 5px;
+    margin: 5px;}
+
+    li a:hover {
+      background-color: #111;
+      color: green;
+      font-size: 50px;
+    }
+</body>
