--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+<style>
+
+
 body {
       background-color: salmon;
     }
@@ -55,3 +58,4 @@ body {
       font-size: 50px;
     }
 </body>
+</style>
