--- a/food/foodStyle.css
+++ b/food/foodStyle.css
@@ -3,7 +3,7 @@ body {
 }
 
 a {
-  color: #4c555a;
+  color: #000;
   font-size: 150%;
   text-decoration: none;
 }
@@ -29,7 +29,7 @@ li.nav {
   margin: 5px;}
 
 li a:hover {
-  background-color: #1FF869;
+  background-color: #000;
   color: green;
   font-size: 20px;
 }
