--- a/food/foodStyle.css
+++ b/food/foodStyle.css
@@ -33,3 +33,9 @@ li a:hover {
   color: green;
   font-size: 20px;
 }
+.center {
+  diplay: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
