--- a/food/foodStyle.css
+++ b/food/foodStyle.css
@@ -14,7 +14,7 @@ ul.nav {
   margin: 0;
   padding: 0;
   position: fixed;
-  background-color: #F3D437;
+  background-color: #fff;
   width: 100%;
   top: 0;
   left: 0;
